--- a/secret.test.yaml
+++ b/secret.test.yaml
@@ -1,3 +1,4 @@
-sma_host: "0.0.0.0"
-sma_password: "PASS"
-telegram_api_key: "ABCD"
+mqtt_broker: "0.0.0.0"
+mqtt_port: "1234"
+mqtt_username: "user"
+mqtt_password: "pass"
