Split configuration in seperate files

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,32 +1,2 @@
-
-# Configure a default setup of Home Assistant (frontend, api, etc)
-default_config:
-
-http:
-  ssl_certificate: /ssl/fullchain.pem
-  ssl_key: /ssl/privkey.pem
-  
-mqtt:
-  discovery: true
-  discovery_prefix: homeassistant
-  broker: !secret mqtt_broker
-  port: !secret mqtt_port
-  username: !secret mqtt_username
-  password: !secret mqtt_password
-  
-alarm_control_panel:
-  - platform: manual
-    arming_time: 0
-    delay_time: 0
-
-tts:
-  - platform: google_translate
-  
-zwave:
-  usb_path: /dev/ttyACM0
-  
-group: !include groups.yaml
-automation: !include automations.yaml
-script: !include scripts.yaml
-scene: !include scenes.yaml
-  
+homeassistant:
+  packages: !include_dir_named integrations
