--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,2 +1,6 @@
 homeassistant:
   packages: !include_dir_named integrations
+
+frontend:
+  javascript_version: latest
+  themes: !include_dir_merge_named themes
