--- a/configuration.yaml
+++ b/configuration.yaml
@@ -4,3 +4,15 @@ homeassistant:
 frontend:
   javascript_version: latest
   themes: !include_dir_merge_named themes
+
+lovelace:
+  mode: yaml
+  resources:
+    - url: /hacsfiles/button-card/button-card.js
+      type: module
+    - url: 'https://fonts.googleapis.com/css?family=Raleway'
+      type: css
+    - url: 'https://fonts.googleapis.com/css?family=Oswald'
+      type: css
+    - url: 'https://fonts.googleapis.com/css?family=Quicksand'
+      type: css
