--- a/lovelace/views/house.yaml
+++ b/lovelace/views/house.yaml
@@ -4,6 +4,9 @@ path: house
 cards:
   - type: vertical-stack
     cards:
+      - !include
+        - ../includes/titles.yaml
+        - title: TEMPERATUUR
       - type: sensor
         entity: sensor.living_temperature
         graph: line
