--- a/lovelace/views/house.yaml
+++ b/lovelace/views/house.yaml
@@ -3,9 +3,23 @@ path: house
 cards:
   - type: vertical-stack
     cards:
-      - !include
-        - ../includes/titles.yaml
-        - title: TEMPERATUUR
+      - type: markdown
+        style: |
+          ha-card {
+            font-size: 20px;
+            font-family: Quicksand;
+            height: 30px;
+            background: none;
+            margin-top: 0em;
+            margin-left: 8px;
+            margin-bottom: -0.4em;
+            box-shadow: none;
+          }
+          ha-markdown {
+            padding: 0px 0px 0px 8px !important;
+            border-left: 3px solid var(--accent-color);
+          }
+        content: TEMPERATUUR
       - type: sensor
         entity: sensor.living_temperature
         graph: line
