--- a/lovelace/views/house.yaml
+++ b/lovelace/views/house.yaml
@@ -24,4 +24,30 @@ cards:
         entity: sensor.living_temperature
         graph: line
         name: Living
+      - type: markdown
+        style: |
+          ha-card {
+            font-size: 20px;
+            font-family: Quicksand;
+            height: 30px;
+            background: none;
+            margin-top: 0em;
+            margin-left: 8px;
+            margin-bottom: -0.4em;
+            box-shadow: none;
+          }
+          ha-markdown {
+            padding: 0px 0px 0px 8px !important;
+            border-left: 3px solid var(--accent-color);
+          }
+        content: Ramen en Deuren
+      - type: "custom:button-card"
+        entity: binary_sensor.schuifraam_contact
+        icon: mdi:cube
+        show_state: true
+        state:
+          - value: "off"
+            color: rgb(5, 147, 255)
+          - value: "on"
+            color: rgb(189, 255, 5)
         
