--- a/lovelace/views/house.yaml
+++ b/lovelace/views/house.yaml
@@ -41,13 +41,35 @@ cards:
             border-left: 3px solid var(--accent-color);
           }
         content: Ramen en Deuren
-      - type: "custom:button-card"
-        entity: binary_sensor.schuifraam_contact
-        icon: mdi:cube
-        show_state: true
-        state:
-          - value: "off"
-            color: rgb(5, 147, 255)
-          - value: "on"
-            color: rgb(189, 255, 5)
-        
+      - type: horizontal-stack
+        cards:
+          - type: "custom:button-card"
+            entity: binary_sensor.schuifraam_contact
+            icon: hass:window-closed-variant
+            show_state: true
+            state:
+              - value: "off"
+                color: rgb(5, 147, 255)
+              - value: "on"
+                color: rgb(189, 255, 5)
+          - type: "custom:button-card"
+            entity: binary_sensor.binary_sensor.voordeur_contact
+            icon: mdi:cube
+            show_state: true
+            color_type: card
+            state:
+              - value: "off"
+                color: rgb(5, 147, 255)
+              - value: "on"
+                color: rgb(189, 255, 5)
+          - type: "custom:button-card"
+            entity: binary_sensor.binary_sensor.achterdeur_contact
+            icon: mdi:cube
+            show_state: true
+            color_type: card
+            state:
+              - value: "off"
+                color: rgb(5, 147, 255)
+              - value: "on"
+                color: rgb(189, 255, 5)
+          
