--- a/lovelace/views/house.yaml
+++ b/lovelace/views/house.yaml
@@ -46,30 +46,32 @@ cards:
           - type: "custom:button-card"
             entity: binary_sensor.schuifraam_contact
             icon: hass:window-closed-variant
-            show_state: true
+            show_state: false
             state:
               - value: "off"
                 color: rgb(5, 147, 255)
               - value: "on"
                 color: rgb(189, 255, 5)
           - type: "custom:button-card"
-            entity: binary_sensor.binary_sensor.voordeur_contact
-            icon: mdi:cube
-            show_state: true
+            entity: binary_sensor.voordeur_contact
+            icon: mdi:door-closed
+            show_state: false
             color_type: card
             state:
               - value: "off"
                 color: rgb(5, 147, 255)
               - value: "on"
                 color: rgb(189, 255, 5)
+                icon: mdi:door-open
           - type: "custom:button-card"
-            entity: binary_sensor.binary_sensor.achterdeur_contact
-            icon: mdi:cube
-            show_state: true
+            entity: binary_sensor.achterdeur_contact
+            icon: mdi:door-closed
+            show_state: false
             color_type: card
             state:
               - value: "off"
                 color: rgb(5, 147, 255)
               - value: "on"
                 color: rgb(189, 255, 5)
+                icon: mdi:door-open
           
