--- a/lovelace/views/house.yaml
+++ b/lovelace/views/house.yaml
@@ -76,4 +76,34 @@ cards:
               - value: "on"
                 color: var(--accent-color)
                 icon: mdi:door-open
+      - type: markdown
+        style: |
+          ha-card {
+            font-size: 20px;
+            font-family: Quicksand;
+            height: 30px;
+            background: none;
+            margin-top: 0em;
+            margin-left: 8px;
+            margin-bottom: -0.4em;
+            box-shadow: none;
+          }
+          ha-markdown {
+            padding: 0px 0px 0px 8px !important;
+            border-left: 3px solid var(--accent-color);
+          }
+        content: Beweging
+      - type: horizontal-stack
+        cards:
+          - type: "custom:button-card"
+            entity: binary_sensor.living_occupancy
+            icon: hass:motion-sensor-off
+            show_state: false
+            color_type: card
+            state:
+              - value: "off"
+                color: var(--ha-card-background)
+              - value: "on"
+                color: var(--accent-color)
+                icon: mdi:motion-sensor
           
