--- a/lovelace/views/house.yaml
+++ b/lovelace/views/house.yaml
@@ -20,7 +20,7 @@ cards:
             border-left: 3px solid var(--accent-color);
             text-transform: uppercase;
           }
-        content: TEMPERATUUR
+        content: Temperatuur
       - type: sensor
         entity: sensor.living_temperature
         graph: line
@@ -42,7 +42,7 @@ cards:
             border-left: 3px solid var(--accent-color);
             text-transform: uppercase;
           }
-        content: RAMEN EN DEUREN
+        content: Ramen en Deuren
       - type: horizontal-stack
         cards:
           - type: "custom:button-card"
@@ -95,7 +95,7 @@ cards:
             border-left: 3px solid var(--accent-color);
             text-transform: uppercase;
           }
-        content: BEWEGING
+        content: Beweging
       - type: horizontal-stack
         cards:
           - type: "custom:button-card"
@@ -110,4 +110,7 @@ cards:
               - value: "on"
                 color: var(--accent-color)
                 icon: mdi:motion-sensor
+      - !include
+        - ../includes/titles.yaml
+        - title: LICHT & BEWEGUNG
           
